cabal-version:      2.4
name:               drillz
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:            BSD-3-Clause
author:             Daniel Wagner
maintainer:         me@dmwit.com
data-files:         drillz.mp3

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable drillz
    main-is:          drillz.hs
    other-modules:    Paths_drillz
    autogen-modules:  Paths_drillz

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                      , containers ^>=0.6
                      , random ^>=1.2
                      , process ^>=1.6
    default-language: Haskell2010

    ghc-options: -Wno-tabs -threaded -O2
